Fix the byte ordering for UTF16BE

BUG:135121


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@633110 283d02a7-25f6-0310-bc7c-ecb5cbfe19da